Change footer text

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </article>
   </main>
     <footer>
-        <p>&copy; 2025 Piedras Angulares. Creado por Irina Tiron.</p>
+        <p>&copy; 2025 Piedras Angulares. Creado por Irina Tiron. Factoría F5.</p>
     </footer>
 </body>
 </html>
